# trove

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.githooks/: pre-commit
.githooks/lib/: common.sh
.githooks/pre-commit.d/: github-merge-squash-only.sh  github-protect-main.sh  rust-clippy.sh  rust-fmt.sh
.githooks/pre-push.d/: git-changelog.sh  git-tags-on-main.sh
.github/workflows/: ci.yml  desktop-ci.yml  desktop-release.yml  fmt-fix.yml  publish-crates.yml  release.yml
crates/keepass-spec-tests/: Cargo.toml
crates/keepass-spec-tests/src/: lib.rs
crates/keepass-spec-tests/tests/: binary_pool.rs  broken_files.rs  conformance_matrix.rs  cross_tool.rs  interop_crud.rs  interop_keyfile.rs  interop_totp.rs  interop_vault_ops.rs  keyfile_formats.rs  spec_round_trip.rs  trove_interop.rs  version_matrix_smoke.rs
crates/keepass-spec-tests/tests/common/: mod.rs
crates/keepass-spec-tests/tests/matrix/: crate_party.rs  fixtures.rs  keepassxc_party.rs  mod.rs  trove_party.rs
crates/sdpm-cli/: Cargo.toml
crates/sdpm-cli/src/: daemon.rs  main.rs
crates/sdpm-cli/tests/: cli_status_e2e.rs
crates/sdpm-core/: Cargo.toml
crates/sdpm-core/src/: lib.rs
crates/sdpm-core/tests/: binary_attachments.rs  vault_roundtrip.rs
crates/sdpmd/: Cargo.toml
crates/sdpmd/fuzz/: Cargo.toml  README.md
crates/sdpmd/fuzz/fuzz_targets/: assuan_line_parse.rs  ssh_wire_parse.rs  ssh_wire_round_trip.rs
crates/sdpmd/src/: handler.rs  idle.rs  lib.rs  main.rs  protocol.rs
crates/sdpmd/src/gpg_agent/: assuan.rs  keys.rs  mod.rs  pkdecrypt.rs
crates/sdpmd/src/materialize/: mod.rs  paths.rs  wipe.rs
crates/sdpmd/src/ssh_agent/: keys.rs  mod.rs  wire.rs
crates/sdpmd/tests/: gpg_agent_e2e.rs  gpg_decrypt_e2e.rs  gpg_git_signing_e2e.rs  gpg_real_export_check.rs  idle_lock_e2e.rs  materialize_e2e.rs  proptest_assuan.rs  proptest_ssh_wire.rs  ssh_agent_e2e.rs  ssh_agent_sign_e2e.rs  status_rpc_e2e.rs
crates/spm-cli/: Cargo.toml
crates/spm-core/: Cargo.toml
crates/spm-core/src/: lib.rs
crates/spmd/: Cargo.toml
crates/spmd/src/: main.rs
crates/trove-cli/: Cargo.toml
crates/trove-cli/src/: clip.rs  daemon.rs  exec.rs  gitcred.rs  hibp.rs  ipc.rs  main.rs  pwgen.rs  xml_export.rs
crates/trove-cli/tests/: autospawn_e2e.rs  cli_crud_e2e.rs  cli_ssh_e2e.rs  cli_status_e2e.rs  clip_e2e.rs  daemons_e2e.rs  exec_json_e2e.rs  generate_audit_e2e.rs  gitcred_resolve_e2e.rs  keyfile_e2e.rs  offline_crud_e2e.rs  offline_e2e.rs  totp_e2e.rs  vault_ops_e2e.rs
crates/trove-core/: Cargo.toml  README.md
crates/trove-core/src/: error.rs  lib.rs
crates/trove-core/tests/: binary_attachments.rs  challenge_response.rs  crud_groups.rs  keyfile_unlock.rs  secret_refs.rs  totp.rs  vault_ops.rs  vault_roundtrip.rs
crates/troved/: Cargo.toml  build.rs
crates/troved/fuzz/: .gitignore  Cargo.toml  README.md
crates/troved/fuzz/fuzz_targets/: assuan_line_parse.rs  ssh_wire_parse.rs  ssh_wire_round_trip.rs
crates/troved/src/: daemons.rs  handler.rs  idle.rs  ipc.rs  lib.rs  main.rs  protocol.rs  singleton.rs
crates/troved/src/gpg_agent/: assuan.rs  mod.rs
crates/troved/src/materialize/: mod.rs  paths.rs
crates/troved/src/ssh_agent/: keeagent.rs  keys.rs  mod.rs  wire.rs
crates/troved/tests/: add_file_e2e.rs  add_gpg_e2e.rs  add_ssh_e2e.rs  crud_rpc_e2e.rs  get_session_e2e.rs  gpg_agent_e2e.rs  gpg_decrypt_e2e.rs  gpg_git_signing_e2e.rs  gpg_real_export_check.rs  idle_lock_e2e.rs  keyfile_unlock_rpc_e2e.rs  materialize_e2e.rs  proptest_assuan.rs  proptest_ssh_wire.rs  singleton_e2e.rs  ssh_agent_e2e.rs  ssh_agent_sign_e2e.rs  status_rpc_e2e.rs  totp_rpc_e2e.rs
docs/: architecture.md  cli-reference.md  kdbx-library-research.md  kdbx-test-coverage.md  keepass-bugs.md  morning-summary-2026-05-08.md  multi-vault.md  parity-plan.md  provisioning-sessions.md  publishing.md  security-review-2026-07-04.md  status.md  threat-model.md
packaging/homebrew/: trove.rb.tmpl
scripts/: trove-dev-env.sh
trove-desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
trove-desktop/design/: README.md  Trove.html  app.jsx  data.jsx  icons.jsx  overlays.jsx  views.jsx
trove-desktop/fixtures/: demo-keyfile.kdbx  demo.kdbx  demo.key
trove-desktop/src/: App.css  App.jsx  api.js  main.jsx  overlays.jsx  styles.css  tree.js  views.jsx
trove-desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
trove-desktop/src-tauri/macos/: entitlements.plist
trove-desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
trove-desktop/src/components/: VaultView.jsx
trove-desktop/src/design/: app.jsx  data.jsx  design.css  icons.jsx  overlays.jsx  views.jsx
trove-desktop/src/i18n/: index.js
trove-desktop/src/i18n/locales/: en.json
trove-desktop/src/store/: tree.js  vault.js
trove-desktop/tests/: App.test.jsx  VaultView.test.jsx  design-parity.test.js  setup.js  tree.test.js
