[workspace]
resolver = "2"
members = ["crates/trove-core", "crates/trove-cli", "crates/troved", "crates/keepass-spec-tests"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# trove is a binary application, not a published library, so the
# `rust-version` field below is a hint for contributors rather than an
# enforced floor. CI does not run an MSRV job (transitive deps adopting
# Edition 2024 made that an arms race with no real benefit). Build with
# current stable Rust.
rust-version = "1.85"

[workspace.dependencies]
trove-core = { path = "crates/trove-core" }
keepass = "0.12"
zeroize = { version = "1", features = ["zeroize_derive"] }
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rpassword = "7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
strip = "symbols"
