[workspace]
resolver = "2"
members = ["crates/trove-core", "crates/trove-cli", "crates/troved"]
# `keepass-spec-tests` is a dev-only conformance harness that ships nothing and
# exercises trove via its CLI (subprocess), never linking trove-core. It pins
# EOL `keepass` producers (e.g. 0.12.5) on purpose to test cross-version
# compatibility, and those drag in old transitive deps (quick-xml 0.39). Keeping
# it OUT of the workspace gives it its own Cargo.lock so the app's audited
# dependency graph stays free of those advisories while the harness still tests
# every version. It's built/tested via its own manifest (see CI).
# `trove-desktop/src-tauri` is the Tauri GUI backend. Like keepass-spec-tests it
# stays OUT of the workspace: Tauri drags in a large native dep tree (webkit,
# gtk, …) with its own advisory surface, so excluding it keeps the CLI/library's
# audited graph lean and gives the app its own Cargo.lock. It still links
# `trove-core` by path (see trove-desktop/src-tauri/Cargo.toml) and is built via
# its own manifest in the desktop CI/release workflows.
exclude = ["crates/keepass-spec-tests", "trove-desktop/src-tauri"]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/antimatter-studios/trove"
# `trove-core` is published to crates.io; the binaries (trove-cli, troved) are
# not. We still don't enforce an MSRV floor: CI runs no MSRV job (transitive
# deps adopting Edition 2024 made that an arms race with no real benefit), so
# the `rust-version` below is a hint for contributors. Build with current
# stable Rust.
rust-version = "1.85"

[workspace.dependencies]
trove-core = { path = "crates/trove-core" }
keepass = "0.13"
zeroize = { version = "1", features = ["zeroize_derive"] }
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rpassword = "7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
strip = "symbols"
