# Standalone workspace (excluded from the parent workspace in the repo-root
# Cargo.toml). This gives the harness its own Cargo.lock so the EOL `keepass`
# producers it pins for compatibility testing (and their old transitive deps,
# e.g. quick-xml 0.39) never enter the app's audited dependency graph.
[workspace]

[package]
name = "keepass-spec-tests"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Clean-room kdbx spec test suite for the keepass crate (programmatic, MIT-licensable, intended for upstream contribution)"
publish = false

# This crate intentionally has no library / binary — it's a test-only host
# that depends on the published `keepass` crate and exercises it directly.
# Tests live under tests/.
[lib]
path = "src/lib.rs"

[dependencies]
# Pinned explicitly (NOT `workspace = true`) so the test crate's fixture-producer
# version is independent of whatever `keepass` version trove itself ships. The
# bare `keepass` name is the 0.12.5 producer in the conformance matrix and what
# the existing clean-room spec tests already use. trove-as-a-participant is
# exercised via its CLI binary (subprocess), not by linking trove-core, so these
# aliases never have to agree with trove's production dependency.
keepass = { package = "keepass", version = "=0.12.5", features = ["save_kdbx4"] }

[dev-dependencies]
tempfile = "3"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
chrono = "0.4"
csv = "1"
uuid = { version = "1", features = ["v4"] }
rust-argon2 = "3"

# Additional keepass-crate versions, linked side by side under distinct names so
# one test binary can MINT fixture vaults with each version and feed them to every
# consumer in the matrix. Cargo permits this because 0.12 and 0.13 are
# semver-incompatible (0.x minor = breaking), so they coexist as separate
# packages — but it forbids two *names* for the same version, so the bare
# `keepass` above (0.12.5) is NOT also aliased here. Pinned exactly (`=`) for a
# reproducible version axis. Extend the axis by adding another `keepass_0XY` line.
keepass_013 = { package = "keepass", version = "=0.13.13", features = ["save_kdbx4"] }
