[package]
name = "sdpm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line client for sdpm"

[[bin]]
name = "sdpm"
path = "src/main.rs"

[dependencies]
sdpm-core.workspace = true
clap.workspace = true
anyhow.workspace = true
rpassword.workspace = true
