[package]
name = "sdpm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "kdbx-compatible vault library: I/O, crypto, sidecars"

[dependencies]
keepass = { workspace = true, features = ["save_kdbx4"] }
zeroize.workspace = true
thiserror.workspace = true
# Used to expose the inner bytes of `keepass::db::Value::Protected` when reading
# binary attachments. keepass 0.12 exposes Protected values as
# `secrecy::SecretBox`; we don't construct them, only read.
secrecy = "0.10"

[dev-dependencies]
tempfile = "3"
keepass = { workspace = true, features = ["save_kdbx4"] }
rand = "0.8"
