[package]
name = "sdpmd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless daemon for sdpm: holds unlocked vault state and serves clients over IPC"

[[bin]]
name = "sdpmd"
path = "src/main.rs"

[dependencies]
sdpm-core.workspace = true
tokio = { workspace = true, features = ["time"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
