[package]
name = "sdpmd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless daemon for sdpm: holds unlocked vault state and serves clients over IPC"

[lib]
name = "sdpmd"
path = "src/lib.rs"

[[bin]]
name = "sdpmd"
path = "src/main.rs"

[dependencies]
sdpm-core.workspace = true
tokio = { workspace = true, features = ["time"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
zeroize.workspace = true
# SSH key parsing (OpenSSH private-key format). The `ed25519` feature pulls in
# `ed25519-dalek` for in-process signing; we don't enable `encryption` because
# v0.0.2.0 only handles unencrypted private keys.
ssh-key = { version = "0.6", default-features = false, features = ["std", "alloc", "ed25519"] }
# `rand` is only needed in tests (to generate fresh keys via `ssh-key`'s
# `PrivateKey::random`). Keeping it test-only avoids paying for randomness in
# the production binary.
ed25519-dalek = { version = "2", default-features = false, features = ["std", "zeroize"] }
# v0.0.3.0: GPG agent. We hand-roll OpenPGP secret-key packet parsing for the
# narrow ed25519/EdDSA subcase (algo 22 + curve Ed25519) — pulling in rPGP
# would balloon compile time by hundreds of crates for 30 lines of parsing.
# `sha1` is required to compute the libgcrypt "keygrip" identifier that
# gpg-agent uses on the Assuan wire.
sha1 = { version = "0.10", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
