[package]
name = "sdpmd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless daemon for sdpm: holds unlocked vault state and serves clients over IPC"

[lib]
name = "sdpmd"
path = "src/lib.rs"

[[bin]]
name = "sdpmd"
path = "src/main.rs"

[dependencies]
sdpm-core.workspace = true
tokio = { workspace = true, features = ["time"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
zeroize.workspace = true
# SSH key parsing (OpenSSH private-key format). v0.0.2.1 enables the RustCrypto
# backends for ed25519, p256, p384, and rsa so `PrivateKey::try_sign` works for
# all four. We skip `p521` (rare; can be added later) and `encryption` (sdpm
# vault attachments are stored unencrypted; the vault itself is the encryption
# boundary).
ssh-key = { version = "0.6", default-features = false, features = ["std", "alloc", "ed25519", "p256", "p384", "rsa"] }
# Used directly for the RSA-SHA256 sign path. ssh-key's built-in
# `Signer<Signature>` impl for `RsaKeypair` hard-codes SHA-512, but the SSH
# agent protocol lets clients select the hash via flag bits (RFC 8332). We
# build pkcs1v15::SigningKey<Sha256> directly when the SHA-256 bit is set.
rsa = { version = "0.9", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false, features = ["std", "oid"] }
ed25519-dalek = { version = "2", default-features = false, features = ["std", "zeroize"] }
# v0.0.3.0: GPG agent. We hand-roll OpenPGP secret-key packet parsing for the
# narrow ed25519/EdDSA subcase (algo 22 + curve Ed25519) — pulling in rPGP
# would balloon compile time by hundreds of crates for 30 lines of parsing.
# `sha1` is required to compute the libgcrypt "keygrip" identifier that
# gpg-agent uses on the Assuan wire.
sha1 = { version = "0.10", default-features = false, features = ["std", "oid"] }
# v0.0.3.1: PKDECRYPT support. ECDH-on-Curve25519 needs Montgomery-form X25519
# scalar multiplication; `x25519-dalek` v2 is pure-rust and re-uses the
# `curve25519-dalek` crate already pulled in by `ed25519-dalek`. AES Key Wrap
# (RFC 3394) is used to unwrap the OpenPGP session key.
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "zeroize"] }
aes-kw = { version = "0.2", features = ["alloc"] }
aes = { version = "0.8", default-features = false }
# v0.0.5.0: random bytes for the materialize secure-wipe pass. We don't need a
# cryptographic CSPRNG strictly speaking — we're overwriting bytes that the
# storage device may or may not actually rewrite in place — but using OsRng
# costs nothing and makes the intent obvious in code review.
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }

[dev-dependencies]
tempfile = "3"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
# `test-util` enables `tokio::test(start_paused = true)` for the IdleTracker
# unit tests so simulated time advances without real wall-clock waits.
tokio = { workspace = true, features = ["test-util"] }
# Property-based testing for the SSH agent wire decoder and Assuan line
# parser. Runs on stable Rust as part of `cargo test` — complements the
# nightly-only `crates/sdpmd/fuzz/` libfuzzer harness with a fast, in-CI
# safety net (256 cases per property by default; runs in seconds).
proptest = { version = "1", default-features = false, features = ["std", "bit-set"] }
