[package]
name = "spm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line client for spm"

[[bin]]
name = "spm"
path = "src/main.rs"

[dependencies]
spm-core.workspace = true
clap.workspace = true
anyhow.workspace = true
rpassword.workspace = true
