[package]
name = "spmd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless daemon for spm: holds unlocked vault state and serves clients over IPC"

[[bin]]
name = "spmd"
path = "src/main.rs"

[dependencies]
spm-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
