[package]
name = "trove-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line client for trove"

[[bin]]
name = "trove"
path = "src/main.rs"

[dependencies]
trove-core.workspace = true
clap.workspace = true
# `trove completions <shell>` emits a shell completion script from the clap
# command tree. clap_complete tracks clap's major version (both are 4.x).
clap_complete = "4"
anyhow.workspace = true
rpassword.workspace = true
thiserror.workspace = true
# v0.0.5.0: `trove materialize` runs the materialize loop in-process. We reuse
# the daemon's path-validation, tmpfs detection, and wipe code by depending on
# the troved library crate. This pulls in tokio and a few extra crates, which
# is fine: anyone running trove-cli on their box already needs troved available.
troved = { path = "../troved" }
tokio = { workspace = true, features = ["rt", "macros", "signal", "time"] }
# v0.0.9.0: daemon-aware CLI commands (lock/unlock/status/idle) speak the
# control protocol over Unix domain sockets. We reuse the wire types from
# `troved::protocol` and parse responses as untyped serde_json::Value (the
# `OkBody` enum is `#[serde(untagged)]` and not safe to deserialize strictly).
serde_json.workspace = true
# v0.0.10.0: code-gated `get` routes extraction through the daemon, which
# returns attachment bytes base64-encoded on the JSON wire. We decode here.
base64 = "0.22"
# `add password --generate` / `generate password|diceware` mint secrets with
# the OS CSPRNG. Same pinning as troved's.
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
# `trove estimate` — Dropbox's zxcvbn strength estimator (the same engine
# KeePassXC's estimate is modeled on).
zxcvbn = "3"
# `trove analyze --hibp` hashes vault passwords for offline lookups in the
# sorted pwned-passwords dump. SHA-1 is HIBP's key format, not a trust choice.
sha1 = "0.10"

[build-dependencies]
# Formats the dev-build timestamp (0.2.0-dev-YYYYMMDDHHMMSS) in build.rs.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time", "io-util", "sync", "process"] }
