[package]
name = "trove-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "kdbx-compatible vault library: I/O, crypto, sidecars"
repository.workspace = true
readme = "README.md"
keywords = ["keepass", "kdbx", "password", "vault", "crypto"]
categories = ["cryptography", "parser-implementations"]

[dependencies]
keepass = { workspace = true, features = ["save_kdbx4"] }
zeroize.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
keepass = { workspace = true, features = ["save_kdbx4"] }
rand = "0.8"
