[package]
name = "trove-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "kdbx-compatible vault library: I/O, crypto, sidecars"
repository.workspace = true
readme = "README.md"
keywords = ["keepass", "kdbx", "password", "vault", "crypto"]
categories = ["cryptography", "parser-implementations"]

[dependencies]
# `totp` unlocks keepass's RFC 6238 implementation + otpauth-URI parsing
# (Entry::get_otp), the engine behind `trove show --totp`. `_merge` unlocks
# Database::merge, the KDBX-standard merge behind `trove merge`.
keepass = { workspace = true, features = ["save_kdbx4", "totp", "_merge"] }
zeroize.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
keepass = { workspace = true, features = ["save_kdbx4", "totp"] }
rand = "0.8"
